Add an interface with fclib to save a ChSystemDescriptor as a hdf5
For the moment the project compile but doesn't work, surely a problem in the CMakeLists
The commit aim to share the project and have some feed back (and help)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -293,6 +293,15 @@ if (NOT USE_EIGEN_OPENMP)
   set(CH_C_FLAGS "${CH_C_FLAGS} -DEIGEN_DONT_PARALLELIZE")
 endif()
 
+
+#-----------------------------------------------------------------------------
+# fclib library
+#-----------------------------------------------------------------------------
+option(WITH_FCLIB ON)
+if (WITH_FCLIB)
+  include(fclib_setup)
+endif()
+
 #-----------------------------------------------------------------------------
 # MPI support
 #-----------------------------------------------------------------------------
@@ -480,7 +489,7 @@ endif()
 # HDF5 support (optional)
 #-----------------------------------------------------------------------------
 
-option(ENABLE_HDF5 "Enable HDF5 support" OFF)
+option(ENABLE_HDF5 "Enable HDF5 support" ON)
 
 if(ENABLE_HDF5)
 
